--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - '*.m'
-      - 'FSMConv2Bin_new_v3.py'
+      - '2503-mpw1/*.m'
+      - '2503-mpw1/FSMConv2Bin_new_v3.py'
 
 jobs:
   build-and-check:
@@ -30,12 +30,12 @@ jobs:
       run: |
         echo "Running FSM conversion..."
 
-        python FSMConv2Bin_new_v3.py \
-          StateM_MPW1_2503_hb_CBW20.m \
-          StateM_MPW1_2503_hb_CBW40.m \
-          StateM_MPW1_2503_hb_CBW80_160.m \
-          StateM_MPW1_2503_lb_CBW20.m \
-          StateM_MPW1_2503_lb_CBW40.m
+        python 2503-mpw1/FSMConv2Bin_new_v3.py \
+          2503-mpw1/StateM_MPW1_2503_hb_CBW20.m \
+          2503-mpw1/StateM_MPW1_2503_hb_CBW40.m \
+          2503-mpw1/StateM_MPW1_2503_hb_CBW80_160.m \
+          2503-mpw1/StateM_MPW1_2503_lb_CBW20.m \
+          2503-mpw1/StateM_MPW1_2503_lb_CBW40.m
 
         echo "Script finished successfully."
 
